--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
     "@types/node": "^12.20.33",
     "@types/react": "^16.14.17",
     "@types/react-dom": "^16.9.14",
+    "localforage": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-picture-in-picture": "^1.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.4",
+    "uuidv4": "^6.2.12",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
