--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/express-ws": "^3.0.1",
     "typescript": "^4.4.2",
     "webpack": "^5.52.0",
     "webpack-cli": "^4.9.0"
