--- a/app/package.json
+++ b/app/package.json
@@ -3,23 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.3.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.33",
-    "@types/react": "^16.14.17",
-    "@types/react-dom": "^16.9.14",
-    "craco-babel-loader": "^0.1.4",
     "localforage": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-picture-in-picture": "^1.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.4.4",
-    "uuidv4": "^6.2.12",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
@@ -36,7 +26,7 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build && rm -rf ../backend/build/build && mv build ../backend/build",
+    "build": "craco build && rm -rf ../coordinator/build/build && mv build ../coordinator/build",
     "test": "craco test"
   },
   "eslintConfig": {
@@ -58,6 +48,17 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.1"
+    "@craco/craco": "^6.3.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.33",
+    "@types/react": "^16.14.17",
+    "@types/react-dom": "^16.9.14",
+    "@types/react-router-dom": "^5.3.1",
+    "@types/uuid": "^8.3.1",
+    "craco-babel-loader": "^0.1.4",
+    "typescript": "^4.4.4"
   }
 }
