--- a/coordinator/package.json
+++ b/coordinator/package.json
@@ -4,9 +4,10 @@
   "description": "Live demo coordinator",
   "main": "index.js",
   "scripts": {
-    "build": "webpack && rm -rf ./build/node_modules/ && cp -rf ./node_modules/ ./build/",
-    "buildall": "npm run build && cd ../app/ && npm run build",
-    "start": "webpack && cd ./build/ && node index.js"
+    "build": "webpack",
+    "deploy": "cd ../app/ && npm run build && cd ../coordinator/ && npm run build && cp -rf ../app/build ./build && cp -rf ./node_modules ./build && cp -rf ./package.json ./build",
+    "start": "node index.js",
+    "dev": "npm run build && cd ./build/ && node index.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "@types/express-ws": "^3.0.1",
     "@types/node": "^16.7.13",
     "@types/uuid": "^8.3.1",
+    "clean-webpack-plugin": "^4.0.0",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.2",
     "webpack": "^5.52.0",
