--- a/server/package.json
+++ b/server/package.json
@@ -5,17 +5,19 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack && cd ./build/ && node index.js"
+    "start": "webpack && cd ./build/ && node index.js -c ws://localhost:25566"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "command-line-args": "^5.2.0",
     "wrtc": "^0.4.7",
     "ws": "^8.2.3"
   },
   "devDependencies": {
     "@mapbox/node-pre-gyp": "^1.0.5",
+    "@types/command-line-args": "^5.2.0",
     "@types/ws": "^8.2.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
