--- a/.github/workflows/main_record-together.yml
+++ b/.github/workflows/main_record-together.yml
@@ -72,7 +72,7 @@ jobs:
 
       - name: npm install and build
         run: |
-          cd server/ && npm install && cd ../server/ && npm install && cd ../coordinator/ && npm install
+          cd ./app/ && npm install && cd ../coordinator/ && npm install
           npm run deploy
           
       - name: 'Deploy to Azure Web App'
