--- a/.github/workflows/main_record-together.yml
+++ b/.github/workflows/main_record-together.yml
@@ -72,8 +72,12 @@ jobs:
 
       - name: npm install and build
         run: |
-          cd ./app/ && npm install && cd ../coordinator/ && npm install
+          cd ./app/
+          npm install
+          cd ../coordinator/
+          npm install
           npm run deploy
+          cd ..
           
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
