--- a/coordinator/package.json
+++ b/coordinator/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "deploy": "cd ../app/ && npm run build && cd ../coordinator/ && webpack",
-    "start": "node index.js",
+    "start": "npm install && node index.js",
     "dev": "webpack && cd ./build/ && node index.js"
   },
   "keywords": [],
